--- a/.github/workflows/kibot.yml
+++ b/.github/workflows/kibot.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   franklin:
     runs-on: ubuntu-latest
-    container: setsoft/kicad_auto:dev_k7
+    container: setsoft/kicad_auto:latest
 
     steps:
     - uses: actions/checkout@v3
