--- a/docs/gerbers.stencil.kibot.yaml
+++ b/docs/gerbers.stencil.kibot.yaml
@@ -4,7 +4,7 @@ kibot:
 preflight:
   update_xml: false
   run_drc: true
-  check_zone_fills: true
+  check_zone_fills: false
   ignore_unconnected: false
   filters:
     - filter: 'Courtyards overlap'
@@ -19,7 +19,7 @@ outputs:
   - name: "https://en.wikipedia.org/wiki/Gerber_format"
     comment: 'gerbers'
     type: 'gerber'
-    dir: 'gerbers'
+    dir: 'gerbers/stencil'
     options:
       # [boolean=true] creates a file with information about all the generated gerbers.
       # You can use it in gerbview to load all gerbers at once
@@ -62,9 +62,6 @@ outputs:
       # [string=''] Board variant to apply
       variant: ''
     layers:
-      - 'Edge.Cuts'
-      - 'copper'
-      - 'F.Mask'
-      - 'B.Mask'
-      - 'F.SilkS'
-      - 'B.SilkS'
+      - layer: 'Edge.Cuts'
+      - layer: 'F.Paste'
+      - layer: 'B.Paste'
