--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # For PCBs designed using KiCad: http://www.kicad-pcb.org/
 # Format documentation: http://kicad-pcb.org/help/file-formats/
 
+kicad/adidas.xml
 # Temporary files
 *-drc.txt
 kibot_errors.filter
