--- a/.github/workflows/kicad.yaml
+++ b/.github/workflows/kicad.yaml
@@ -1,30 +1,130 @@
-name: kicad-fabrication
+# SPDX-FileCopyrightText: 2022 nerdyscout <https://github.com/nerdyscout/>
+#
+# SPDX-License-Identifier: CC0-1.0
+
+name: KiBot
 
 on:
+  workflow_dispatch:
+  push:
+    paths:
+    - "kicad/*.kicad_sch"
+    - "kicad/*.kicad_pcb"
+    - "kicad/*.kicad_pro"
+    - "**/*kibot.yml"
   pull_request:
     paths:
-      - 'kicad/**.kicad_sch'
-      - 'kicad/**.kicad_pcb'
+    - "kicad/*.kicad_sch"
+    - "kicad/*.kicad_pcb"
+    - "kicad/*.kicad_pro"
+    - "**/*kibot.yml"
+
+env:
+  schema: "kicad/*.kicad_sch"
+  board: "kicad/*.kicad_pcb"
+  dir: .
 
 jobs:
-  board-docs:
+# checks
+  ERC:
     runs-on: ubuntu-latest
+    container:
+      image: setsoft/kicad_auto:ki6
     steps:
-    - uses: actions/checkout@v3
-    - uses: nerdyscout/kicad-exports@v2.3.1
-      with:
-      # Required - kibot config file
-        config: docs/fabrication.default.kibot.lst
-      #optional - prefix to output defined in config
-        dir: output
-      # optional - schematic file
-        schema: 'kicad/adidas.kicad_sch'
-      # optional - PCB design file
-        board: 'kicad/adidas.kicad_pcb'
-      # optional - verbose output info
-        verbose: 1
-    - name: upload results
-      uses: actions/upload-artifact@v3
-      with:
-        name: output
-        path: output
+      - uses: actions/checkout@v3
+      - name: run kibot
+        run: | 
+          kibot -c kibot.yml -e ${{env.schema}} -b ${{env.board}} -d ${{env.dir}} -s run_drc -v -i
+  DRC:
+    runs-on: ubuntu-latest
+    container:
+      image: setsoft/kicad_auto:ki6
+    steps:
+      - uses: actions/checkout@v3
+      - name: run kibot
+        run: | 
+          kibot -c kibot.yml -e ${{env.schema}} -b ${{env.board}} -d ${{env.dir}} -s run_erc -v -i
+# documentation
+  docs:
+    runs-on: ubuntu-latest
+    needs: [ERC]
+    container:
+      image: setsoft/kicad_auto:ki6
+    steps:
+      - uses: actions/checkout@v3
+      - name: run kibot
+        run: | 
+          kibot -c kibot.yml -e ${{env.schema}} -b ${{env.board}} -d ${{env.dir}} -s run_erc,run_drc -v \
+            ibom.html octopart.csv schematic.pdf schematic.svg board_top.pdf board_bottom.pdf
+      - uses: actions/upload-artifact@v3.1.1
+        if: ${{success()}}
+        with:
+          name: ${{github.event.repository.name}}_docs
+          if-no-files-found: error
+          path: |
+            ${{env.dir}}/docs/**
+            !${{env.dir}}/**/*.ogv
+            !${{env.dir}}/**/*.log
+# fabrications
+  gerbers:
+    runs-on: ubuntu-latest
+    needs: [DRC]
+    container:
+      image: setsoft/kicad_auto:ki6
+    steps:
+      - uses: actions/checkout@v3
+      - name: run kibot
+        run: |
+          kibot -c kibot.yml -e ${{env.schema}} -b ${{env.board}} -d ${{env.dir}} -s run_erc,run_drc -v \
+            gerbers.gbr drills.gbr drills.drl pickandplace.csv bom.csv
+      - uses: actions/upload-artifact@v3.1.1
+        if: ${{success()}}
+        with:
+          name: ${{github.event.repository.name}}_gerbers
+          if-no-files-found: error
+          path: |
+            ${{env.dir}}/gerbers/**
+            !${{env.dir}}/**/*.ogv
+            !${{env.dir}}/**/*.log
+# cad
+  cad:
+    runs-on: ubuntu-latest
+    needs: [DRC]
+    container:
+      image: setsoft/kicad_auto:ki6
+    steps:
+      - uses: actions/checkout@v3
+      - name: run kibot
+        run: | 
+          kibot -c kibot.yml -e ${{env.schema}} -b ${{env.board}} -d ${{env.dir}} -s run_erc,run_drc -v \
+            model.step openboardview.brd autocad.dxf
+      - uses: actions/upload-artifact@v3.1.1
+        if: ${{success()}}
+        with:
+          name: ${{github.event.repository.name}}_cad
+          if-no-files-found: error
+          path: |
+            ${{env.dir}}/cad/**
+            !${{env.dir}}/**/*.ogv
+            !${{env.dir}}/**/*.log
+# images
+  render:
+    runs-on: ubuntu-latest
+    needs: [DRC]
+    container:
+      image: setsoft/kicad_auto:ki6
+    steps:
+      - uses: actions/checkout@v3
+      - name: run kibot
+        run: | 
+          kibot -c kibot.yml -e ${{env.schema}} -b ${{env.board}} -d ${{env.dir}} -s run_erc,run_drc -v \
+            board_black_top.svg board_black_bottom.svg
+      - uses: actions/upload-artifact@v3.1.1
+        if: ${{success()}}
+        with:
+          name: ${{github.event.repository.name}}_img
+          if-no-files-found: error
+          path: |
+            ${{env.dir}}/img/**
+            !${{env.dir}}/**/*.ogv
+            !${{env.dir}}/**/*.log
