--- a/.github/workflows/platformio.yml
+++ b/.github/workflows/platformio.yml
@@ -2,26 +2,32 @@
 #
 # SPDX-License-Identifier: CC0-1.0
 
-name: PlatformIO
+name: PlatformIO CI
 
-on:
-  workflow_dispatch:
-  pull_request:
-    paths:
-    #- src/**
-    - test/hardware_test/**
+on: [pull_request]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        hardware_test: [test/hardware_test/hardware_test.ino]
+
     steps:
       - uses: actions/checkout@v3
-# https://github.com/karniv00l/platformio-run-action
-      - uses: karniv00l/platformio-run-action@1.1.1
-#        with:
-#          environments: ""
-#          targets: ""
-#          jobs: 6
-#          silent: false
-#          verbose: true
-#          disable-auto-clean: false
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/pip
+            ~/.platformio/.cache
+          key: ${{ runner.os }}-pio
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.9"
+      - name: Install PlatformIO Core
+        run: pip install --upgrade platformio
+
+      - name: Build PlatformIO examples
+        run: pio ci --board=<ID_1> --board=<ID_2> --board=<ID_N>
+        env:
+          PLATFORMIO_CI_SRC: ${{ matrix.hardware_test }}
