--- a/.github/workflows/platformio.yml
+++ b/.github/workflows/platformio.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        hardware_test: [test/hardware_test/hardware_test.ino]
+        hardware_test: [test/hardware_test/hardware_test.ino, include/dead10c5.h]
 
     steps:
       - uses: actions/checkout@v3
